--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MyVariousTest</string>
+
+    <string name="transition_image">transition_pinchimageview</string>
+
 </resources>
